# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: testlint.yml
gendiff/: __init__.py  cli.py  gen_parse.py  gendiff.py  generate_diff.py  internal_representation.py  parser.py
gendiff/formatters/: format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: res.txt
