[tool.poetry]
packages = [
    { include = "gendiff" },
]

name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["valek <valekgodovan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
